# FileMergeTool

./: .gitignore  LICENSE  README.md  pyproject.toml  sensitive-scan.config.json
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
sample_configs/: file-list.json  image-merge-both.json  image-merge-html.json  image-merge-pptx.json  office-merge.json  pdf-merge.json  text-merge.json
scripts/: build-exe-launcher.ps1  check-sensitive-data.ps1  ensure-venv.ps1  install-git-hooks.ps1  merge-file-list.ps1  merge-text.ps1  run-cli.ps1  run-dev.ps1  run-tests.ps1  setup-dev.ps1
src/file_merge_tool/: __init__.py
src/file_merge_tool/api/: main.py
src/file_merge_tool/application/: __init__.py  create_file_list.py  merge_excel.py  merge_image.py  merge_mail.py  merge_pdf.py  merge_powerpoint.py  merge_recovery.py  merge_text.py  merge_word.py  output_files.py  run_job.py  run_summary.py  source_target_reporting.py  target_groups.py
src/file_merge_tool/cli/: main.py
src/file_merge_tool/domain/: artifact.py  config.py  extension_selection.py  (+8 more)
tests/integration/: test_file_list_job.py  test_sensitive_scan_scripts.py
tests/unit/: test_excel_merge.py  test_exclude_rules.py  test_extension_selection.py  test_history.py  test_image_merge.py  test_job_runner.py  test_mail_merge.py  test_pdf_merge.py  test_powerpoint_merge.py  test_restart_server.py  test_rule_matching.py  test_run_summary.py  test_sensitivity.py  test_settings_store.py  test_text_merge.py  test_word_merge.py
(+47 files in other folders)
